--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,6 @@
 		<meta http-equiv="refresh" content="0; url=https://s3-us-west-1.amazonaws.com/volunteervoice/error/enable_js.html">
 	</noscript>
 	<!-- end enable_js -->
-
-	<!-- Google analytics -->
-	<%= analytics_init if Rails.env.production? %>
-	<!-- end google analytics -->
 	
 	<!-- facebook box plugin root -->
 	<div id="fb-root"></div>
@@ -895,6 +891,22 @@ document.createElement('article');
 document.createElement('aside');
 document.createElement('section');
 </script>
+
+<!-- Google analytics -->
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-31745240-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+<!-- end google analytics -->
 
 <script type="text/javascript">
 // facebook box plugin
