fixing error page

--- a/app/views/blog_posts/_interesting.html.erb
+++ b/app/views/blog_posts/_interesting.html.erb
@@ -4,7 +4,7 @@
 <!-- NOTE: all style/css rules are in /blog_posts/resources -->
 <table class="interesting_blog_post">
 	<!-- blog post image (if it exists) -->
-	<%if blog_post.square_image.url.present?)%>
+	<%if blog_post.square_image.url.present?%>
 	<tr>
 		<td> 
 			<p align="center">
