--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -552,7 +552,7 @@ src="https://s3-us-west-1.amazonaws.com/volunteervoice/images/OrgLoginTabRedzz.p
 		<!-- END YEILD -->
 		<!-- ******************************* -->
 
-		 <!-- for sticky footer -->
+		<div id="push"></div> <!-- for sticky footer -->
 		
 	</div><!-- END PAGEWRAP -->
 
