--- a/app/views/blog_posts/_our_blog.html.erb
+++ b/app/views/blog_posts/_our_blog.html.erb
@@ -4,12 +4,12 @@
 <!-- NOTE: all style/css rules are in /blog_posts/resources -->
 <table class="our_blog_post">
 	<!-- blog post image (if it exists)-->
-	<%if !(f.square_image.url.nil?)%>
+	<%if !(blog_post.square_image.url.nil?)%>
 	<tr>
 		<td> 
 			<p align="center">
 				<p class="squareImageContainer">
-					<%= image_tag f.square_image.url, :class => "squareImage"%>
+					<%= image_tag blog_post.square_image.url, :class => "squareImage"%>
 				</p>
 			</p>
 		</td>
@@ -20,8 +20,8 @@
 	<tr>
 		<td>
 			<p class="green postTitleContainer">
-				<a href="/blog_posts/<%=f.id%>"> 
-					<%=f.title%>
+				<a href="/blog_posts/<%=blog_post.id%>"> 
+					<%=blog_post.title%>
 				</a>
 			</p>
 		</td>
@@ -31,7 +31,7 @@
 	<tr>
 		<td>
 			<p class="datePostedContainer datePostedContainerOurBlog">
-				Posted <%= f.published_at.strftime("%m/%e/%Y").gsub(/^0/,'')%>
+				Posted <%= blog_post.published_at.strftime("%m/%e/%Y").gsub(/^0/,'')%>
 			</p>
 		</td>
 	</tr><!-- end blog post posted date -->
@@ -40,7 +40,7 @@
 	<tr>
 		<td>
 			<p class="blogPostBody">
-			<%= (truncate f.body.gsub(%r{</?[^>]+?>}, ''), :length => 600).html_safe %> 
+			<%= (truncate blog_post.body.gsub(%r{</?[^>]+?>}, ''), :length => 600).html_safe %> 
 			</p>
 			<br /> 
 		</td>
