fixing controllers to use meta-programming

--- a/app/views/organizations/show_all.html.erb
+++ b/app/views/organizations/show_all.html.erb
@@ -134,12 +134,12 @@ a.programLink:hover{color:#68c2d8; background:none}
 				<span id="listByLabel">List By: </span>
 				<div class="select-div" id="listBySelectDiv">
 					<select id="sort_by" name="sort_by">
-						<option value="rating_high">Highest Rated</option>
-						<option value="rating_low">Lowest Rated</option>
-						<option value="review_recent">Recently Reviewed</option>
-						<option value="profiled_recent">Recently Profiled</option>
-						<option value="alphabetical_az">Alphabetical A-Z</option>
-						<option value="alphabetical_za">Alphabetical Z-A</option>
+						<option value="overall desc">Highest Rated</option>
+						<option value="overall">Lowest Rated</option>
+						<option value="reviewed_at">Recently Reviewed</option>
+						<option value="created_at">Recently Profiled</option>
+						<option value="name">Alphabetical A-Z</option>
+						<option value="name desc">Alphabetical Z-A</option>
 					</select>
 				</div>
 				<% end %>
