--- a/app/views/reviews/show_all.html.erb
+++ b/app/views/reviews/show_all.html.erb
@@ -291,11 +291,11 @@ tr, td {
 				<span id="listByLabel">List By: </span>
 				<div class="select-div" id="listBySelectDiv">
 					<select id="sort_by" name="sort_by">
-						<option value="rating_high">Highest Rated</option>
-						<option value="rating_low">Lowest Rated</option>
-						<option value="review_recent">Most Recent</option>
-						<option value="organization_name_az">Organization Name (A to Z)</option>
-						<option value="organization_name_za">Organization Name (Z to A)</option>
+						<option value="overall desc">Highest Rated</option>
+						<option value="overall">Lowest Rated</option>
+						<option value="created_at">Most Recent</option>
+						<option value="organization_name">Organization Name (A to Z)</option>
+						<option value="organization_name desc">Organization Name (Z to A)</option>
 					</select>
 				</div>
 				<% end %>
